--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@ body{
 
 .header{
 	background-color: pink;
+	/*display: flex;
+	align-items: center;
+	justify-content: center;*/
 }
 
 h1 {
@@ -25,7 +28,7 @@ h3 {
 
 .timeContainer {
 	background-color: #4aaaa5;
-	height: 180%;
+	height: 200%;
 	margin: 20 50 20 50;
 }
 
@@ -33,4 +36,8 @@ h3 {
 	text-align: center;
 	color: black;
 	font-size : 22px;
+}
+
+#startButton {
+	margin-bottom: 10px;
 }
